# ontogenesis

./: .IMPORT_SOURCE.txt  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt
Alignments/: d3fend.ttl  dodaf-cco.ttl  fibo.ttl  gist.ttl  iof-sco.ttl  mitre-attack.ttl  sector-domains.ttl  seven-model-stack.ttl  uco-case.ttl  w3c-org.ttl
Domains/: adversarial-scenario.ttl  agentic-purple-team.ttl  balance-sheet.ttl  business_core.ttl  business_drivers.ttl  business_metrics.ttl  cc_runners.ttl  civic-governance.ttl  cyber.ttl  cybernetic-self.ttl  data-reference.ttl  defense-c2.ttl  environment-reference.ttl  finance.ttl  fraud-decision-intelligence.ttl  health-anatomy.ttl  human.ttl  institutional-work.ttl  investigation.ttl  knowledge-commons-canon.ttl  kubernetes.ttl  life-first-value.ttl  math.ttl  metadata.ttl  org-legal.ttl  party-identity.ttl  performance-reference.ttl  product-service.ttl  regulatory-reporting.ttl  security-tools.ttl  service-reference.ttl  smart-home-privacy.ttl  supply-chain.ttl  technical-reference.ttl  threat-intel.ttl  tritfabric.ttl  web.ttl
LICENSES/: CC-BY-4.0.txt
Lower/: bindings-core.ttl
Middle/: action-ontology.ttl  banking-core.ttl  governed-intelligence.ttl  kg-lifecycle.ttl  learning-ontogenesis.ttl  named-graph-governance.ttl  reciprocal-channel-governance.ttl  registries.ttl  semantic-mapping.ttl  system-architecture.ttl
Platform/: Genesis.ttl  Genesys.ttl  Inception.ttl  Mesh.ttl  Twin.ttl  (+9 more)
(+335 files in other folders)
